分开处理Post和GET；引入mysql；jsoncpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(HTTPSERVER)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(HTTPSERVER main.cpp mysocket.h http.cpp epoll.h)
+
+
+add_executable(HTTPSERVER main.cpp mysocket.h http.cpp epoll.h mysql.h database.cpp)
+
+target_link_libraries(HTTPSERVER libjson.a)
