完成了发布物品，响应物品，查看物品响应者等请求的服务器接口

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(HTTPSERVER)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(HTTPSERVER main.cpp mysocket.h http.cpp epoll.h mysql.h mysql.cpp)
+add_executable(HTTPSERVER main.cpp mysocket.h http.cpp epoll.h mysql.h)
 
 target_link_libraries(HTTPSERVER libjson.a)
 target_link_libraries(HTTPSERVER libmysqlclient.so)
